# InteropMemoryMappedFile

./: .gitignore  InteropMemoryMappedFileTest.sln
Managed/: Program.cs  build-linux.sh
Native/: CMakeLists.txt  CMakeSettings.json  build.sh
Native/MMFLib/: CMakeLists.txt  mmf.h  pal_posix.c  pal_windows.c
Native/ProcessA/: CMakeLists.txt  main.c
Native/ProcessB/: CMakeLists.txt  main.c
